@@ -78,6 +78,7 @@ imageMap['eu-west-1a.min-centos-6-x64']     = properties.AwsAmi['Centos6_x86_64'
 imageMap['eu-west-1a.min-centos-7-x64']     = properties.AwsAmi['Centos7_x86_64']['euWest1']
 imageMap['eu-west-1a.min-ol-8-x64']         = properties.AwsAmi['OracleLinux8_x86_64']['euWest1']
 imageMap['eu-west-1a.min-ol-9-x64']         = properties.AwsAmi['OracleLinux9_x86_64']['euWest1']
+imageMap['eu-west-1a.min-bookworm-x64']     = properties.AwsAmi['Debian12_x86_64']['euWest1']
 imageMap['eu-west-1a.min-bullseye-x64']     = properties.AwsAmi['Debian11_x86_64']['euWest1']
 imageMap['eu-west-1a.min-buster-x64']       = properties.AwsAmi['Debian10_x86_64']['euWest1']
 imageMap['eu-west-1a.min-bionic-x64']       = properties.AwsAmi['Ubuntu1804_x86_64']['euWest1']
@@ -90,6 +91,7 @@ imageMap['eu-west-1a.docker-32gb-bullseye'] = imageMap['eu-west-1a.min-bullseye-
 
 imageMap['eu-west-1a.docker-32gb-aarch64']  = properties.AwsAmi['AmazonLinux2_aarch64']['euWest1']
 imageMap['eu-west-1a.min-centos-7-aarch64'] = properties.AwsAmi['Centos7_aarch64']['euWest1']
+imageMap['eu-west-1a.min-bookworm-aarch64'] = properties.AwsAmi['Debian12_aarch64']['euWest1']
 imageMap['eu-west-1a.min-bullseye-aarch64'] = properties.AwsAmi['Debian11_aarch64']['euWest1']
 imageMap['eu-west-1a.min-jammy-aarch64']    = properties.AwsAmi['Ubuntu2204_aarch64']['euWest1']
 
@@ -103,6 +105,7 @@ imageMap['eu-west-1b.min-ol-8-x64']         = imageMap['eu-west-1a.min-ol-8-x64'
 imageMap['eu-west-1b.min-ol-9-x64']         = imageMap['eu-west-1a.min-ol-9-x64']
 
 imageMap['eu-west-1b.min-centos-6-x64']     = imageMap['eu-west-1a.min-centos-6-x64']
+imageMap['eu-west-1b.min-bookworm-x64']     = imageMap['eu-west-1a.min-bookworm-x64']
 imageMap['eu-west-1b.min-bullseye-x64']     = imageMap['eu-west-1a.min-bullseye-x64']
 imageMap['eu-west-1b.min-buster-x64']       = imageMap['eu-west-1a.min-buster-x64']
 imageMap['eu-west-1b.min-bionic-x64']       = imageMap['eu-west-1a.min-bionic-x64']
@@ -115,6 +118,7 @@ imageMap['eu-west-1b.docker-32gb-bullseye'] = imageMap['eu-west-1a.docker-32gb-b
 
 imageMap['eu-west-1b.docker-32gb-aarch64']    = imageMap['eu-west-1a.docker-32gb-aarch64']
 imageMap['eu-west-1b.min-centos-7-aarch64']   = imageMap['eu-west-1a.min-centos-7-aarch64']
+imageMap['eu-west-1b.min-bookworm-aarch64']   = imageMap['eu-west-1a.min-bookworm-aarch64']
 imageMap['eu-west-1b.min-bullseye-aarch64']   = imageMap['eu-west-1a.min-bullseye-aarch64']
 imageMap['eu-west-1b.min-jammy-aarch64']      = imageMap['eu-west-1a.min-jammy-aarch64']
 
@@ -128,6 +132,7 @@ imageMap['eu-west-1c.min-ol-8-x64']         = imageMap['eu-west-1a.min-ol-8-x64'
 imageMap['eu-west-1c.min-ol-9-x64']         = imageMap['eu-west-1a.min-ol-9-x64']
 
 imageMap['eu-west-1c.min-centos-6-x64']     = imageMap['eu-west-1a.min-centos-6-x64']
+imageMap['eu-west-1c.min-bookworm-x64']     = imageMap['eu-west-1a.min-bookworm-x64']
 imageMap['eu-west-1c.min-bullseye-x64']     = imageMap['eu-west-1a.min-bullseye-x64']
 imageMap['eu-west-1c.min-buster-x64']       = imageMap['eu-west-1a.min-buster-x64']
 imageMap['eu-west-1c.min-bionic-x64']       = imageMap['eu-west-1a.min-bionic-x64']
@@ -140,6 +145,7 @@ imageMap['eu-west-1c.docker-32gb-bullseye'] = imageMap['eu-west-1a.docker-32gb-b
 
 imageMap['eu-west-1c.docker-32gb-aarch64']    = imageMap['eu-west-1a.docker-32gb-aarch64']
 imageMap['eu-west-1c.min-centos-7-aarch64']   = imageMap['eu-west-1a.min-centos-7-aarch64']
+imageMap['eu-west-1c.min-bookworm-aarch64']   = imageMap['eu-west-1a.min-bookworm-aarch64']
 imageMap['eu-west-1c.min-bullseye-aarch64']   = imageMap['eu-west-1a.min-bullseye-aarch64']
 imageMap['eu-west-1c.min-jammy-aarch64']      = imageMap['eu-west-1a.min-jammy-aarch64']
 
@@ -163,6 +169,7 @@ userMap['min-centos-7-x64']     = properties.AwsAmi['Centos7_x86_64']['user']
 userMap['fips-centos-7-x64']    = properties.AwsAmi['FipsCentos7_x86_64']['user']
 userMap['min-ol-8-x64']         = properties.AwsAmi['OracleLinux8_x86_64']['user']
 userMap['min-ol-9-x64']         = properties.AwsAmi['OracleLinux9_x86_64']['user']
+userMap['min-bookworm-x64']     = properties.AwsAmi['Debian12_x86_64']['user']
 userMap['min-bullseye-x64']     = properties.AwsAmi['Debian11_x86_64']['user']
 userMap['min-stretch-x64']      = properties.AwsAmi['Debian9_x86_64']['user']
 userMap['min-buster-x64']       = properties.AwsAmi['Debian10_x86_64']['user']
@@ -173,6 +180,7 @@ userMap['docker-32gb-bullseye'] = properties.AwsAmi['Debian11_x86_64']['user']
 
 userMap['docker-32gb-aarch64']    = properties.AwsAmi['AmazonLinux2_aarch64']['user']
 userMap['min-centos-7-aarch64']   = properties.AwsAmi['Centos7_aarch64']['user']
+userMap['min-bookworm-aarch64']   = properties.AwsAmi['Debian12_aarch64']['user']
 userMap['min-bullseye-aarch64']   = properties.AwsAmi['Debian11_aarch64']['user']
 userMap['min-jammy-aarch64']      = properties.AwsAmi['Ubuntu2204_aarch64']['user']
 
@@ -201,7 +209,7 @@ initMap['docker'] = '''
 
     sudo amazon-linux-extras install epel -y
     sudo amazon-linux-extras install java-openjdk11 -y
-    sudo yum -y install git docker p7zip
+    sudo yum -y install git docker p7zip tzdata-java
     sudo yum -y remove awscli
 
     if ! $(aws --version | grep -q 'aws-cli/2'); then
@@ -421,7 +429,7 @@ initMap['rpmMap'] = '''
         echo try again
     done
     sudo amazon-linux-extras install java-openjdk11 -y
-    sudo yum -y install git || :
+    sudo yum -y install git tzdata-java || :
     sudo yum -y install aws-cli || :
     sudo install -o $(id -u -n) -g $(id -g -n) -d /mnt/jenkins
 
@@ -468,11 +476,21 @@ initMap['debMap'] = '''
 
     if [[ ${DEB_VER} == "buster" ]] || [[ ${DEB_VER} == "bullseye" ]]; then
         JAVA_VER="openjdk-11-jre-headless"
+    elif [[ ${DEB_VER} == "bookworm" ]]; then
+        JAVA_VER="openjdk-17-jre-headless"
     else
         JAVA_VER="openjdk-11-jre-headless"
     fi
 
-    sudo apt-get -y install ${JAVA_VER} git
+    if [[ ${DEB_VER} == "bookworm" ]]; then
+        sudo apt-get -y install ${JAVA_VER} git
+        sudo mv /etc/ssl /etc/ssl_old
+        sudo apt-get -y install ${JAVA_VER}
+        sudo cp -r /etc/ssl_old /etc/ssl
+    else
+        sudo apt-get -y install ${JAVA_VER} git
+    fi
+
     sudo install -o $(id -u -n) -g $(id -g -n) -d /mnt/jenkins
 '''
 
@@ -486,6 +504,7 @@ initMap['fips-centos-7-x64'] = initMap['rpmMap']
 initMap['min-ol-8-x64']      = initMap['rpmMap']
 initMap['min-ol-9-x64']      = initMap['rpmMap']
 
+initMap['min-bookworm-x64'] = initMap['debMap']
 initMap['min-bullseye-x64'] = initMap['debMap']
 initMap['min-buster-x64']  = initMap['debMap']
 initMap['min-bionic-x64']  = initMap['debMap']
@@ -494,6 +513,7 @@ initMap['min-xenial-x64']  = initMap['debMap']
 
 initMap['docker-32gb-aarch64']  = initMap['docker']
 initMap['min-centos-7-aarch64'] = initMap['rpmMap']
+initMap['min-bookworm-aarch64'] = initMap['debMap']
 initMap['min-bullseye-aarch64'] = initMap['debMap']
 initMap['min-jammy-aarch64']    = initMap['debMap']
 
@@ -514,6 +534,7 @@ typeMap['fips-centos-7-x64'] = typeMap['min-centos-7-x64']
 typeMap['min-ol-8-x64']      = typeMap['min-centos-7-x64']
 typeMap['min-ol-9-x64']      = 'i4i.2xlarge'
 typeMap['min-bionic-x64']    = typeMap['min-centos-7-x64']
+typeMap['min-bookworm-x64']  = typeMap['min-centos-7-x64']
 typeMap['min-bullseye-x64']  = typeMap['min-centos-7-x64']
 typeMap['min-buster-x64']    = typeMap['min-centos-7-x64']
 typeMap['min-centos-6-x64']  = 't3.2xlarge'
@@ -526,6 +547,7 @@ typeMap['docker-32gb-bullseye'] = 'i4i.2xlarge'
 
 typeMap['docker-32gb-aarch64']  = 'r6g.2xlarge'
 typeMap['min-centos-7-aarch64'] = typeMap['docker-32gb-aarch64']
+typeMap['min-bookworm-aarch64'] = typeMap['docker-32gb-aarch64']
 typeMap['min-bullseye-aarch64'] = typeMap['docker-32gb-aarch64']
 typeMap['min-jammy-aarch64']    = typeMap['docker-32gb-aarch64']
 
@@ -546,11 +568,13 @@ execMap['min-buster-x64']    = '1'
 execMap['docker-32gb-hirsute'] = '1'
 execMap['docker-32gb-focal'] = '1'
 execMap['docker-32gb-jammy'] = '1'
+execMap['min-bookworm-x64']  = '1'
 execMap['min-bullseye-x64']  = '1'
 execMap['docker-32gb-bullseye']  = '1'
 
 execMap['docker-32gb-aarch64']  = '1'
 execMap['min-centos-7-aarch64'] = '1'
+execMap['min-bookworm-aarch64'] = '1'
 execMap['min-bullseye-aarch64'] = '1'
 execMap['min-jammy-aarch64']    = '1'
 
@@ -572,11 +596,13 @@ devMap['min-buster-x64']    = '/dev/xvda=:8:true:gp2,/dev/xvdd=:80:true:gp2'
 devMap['docker-32gb-hirsute'] = devMap['docker']
 devMap['docker-32gb-focal'] = devMap['docker']
 devMap['docker-32gb-jammy'] = devMap['docker']
+devMap['min-bookworm-x64']  = '/dev/xvda=:8:true:gp2,/dev/xvdd=:80:true:gp2'
 devMap['min-bullseye-x64']  = '/dev/xvda=:8:true:gp2,/dev/xvdd=:80:true:gp2'
 devMap['docker-32gb-bullseye']  = '/dev/xvda=:8:true:gp2,/dev/xvdd=:80:true:gp2'
 
 devMap['docker-32gb-aarch64']  = '/dev/xvda=:8:true:gp2,/dev/xvdd=:80:true:gp2'
 devMap['min-centos-7-aarch64'] = '/dev/xvda=:8:true:gp2,/dev/xvdd=:80:true:gp2'
+devMap['min-bookworm-aarch64'] = '/dev/xvda=:8:true:gp2,/dev/xvdd=:80:true:gp2'
 devMap['min-bullseye-aarch64'] = '/dev/xvda=:8:true:gp2,/dev/xvdd=:80:true:gp2'
 devMap['min-jammy-aarch64']    = '/dev/xvda=:8:true:gp2,/dev/xvdd=:80:true:gp2'
 
@@ -597,13 +623,42 @@ labelMap['min-buster-x64']    = ''
 labelMap['docker-32gb-hirsute'] = ''
 labelMap['docker-32gb-focal'] = ''
 labelMap['docker-32gb-jammy'] = ''
+labelMap['min-bookworm-x64']  = ''
 labelMap['min-bullseye-x64']  = ''
 labelMap['docker-32gb-bullseye']  = ''
 
 labelMap['docker-32gb-aarch64']  = ''
 labelMap['min-centos-7-aarch64'] = ''
+labelMap['min-bookworm-aarch64'] = ''
 labelMap['min-bullseye-aarch64'] = ''
 labelMap['min-jammy-aarch64']    = ''
+
+jvmoptsMap = [:]
+jvmoptsMap['docker']            = '-Xmx512m -Xms512m'
+jvmoptsMap['docker-32gb']       = jvmoptsMap['docker']
+jvmoptsMap['docker2']           = jvmoptsMap['docker']
+jvmoptsMap['micro-amazon']      = jvmoptsMap['docker']
+jvmoptsMap['min-bionic-x64']    = jvmoptsMap['docker']
+jvmoptsMap['min-centos-6-x64']  = jvmoptsMap['docker']
+jvmoptsMap['min-centos-7-x64']  = jvmoptsMap['docker']
+jvmoptsMap['fips-centos-7-x64'] = jvmoptsMap['docker']
+jvmoptsMap['min-ol-8-x64']      = jvmoptsMap['docker']
+jvmoptsMap['min-ol-9-x64']      = jvmoptsMap['docker']
+jvmoptsMap['min-stretch-x64']   = jvmoptsMap['docker']
+jvmoptsMap['min-xenial-x64']    = jvmoptsMap['docker']
+jvmoptsMap['min-buster-x64']    = jvmoptsMap['docker']
+jvmoptsMap['docker-32gb-hirsute'] = jvmoptsMap['docker']
+jvmoptsMap['docker-32gb-focal'] = jvmoptsMap['docker']
+jvmoptsMap['docker-32gb-jammy'] = jvmoptsMap['docker']
+jvmoptsMap['min-bookworm-x64']  = '-Xmx512m -Xms512m --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED'
+jvmoptsMap['min-bullseye-x64']  = jvmoptsMap['docker']
+jvmoptsMap['docker-32gb-bullseye']  = jvmoptsMap['docker']
+
+jvmoptsMap['docker-32gb-aarch64']  = jvmoptsMap['docker']
+jvmoptsMap['min-centos-7-aarch64'] = jvmoptsMap['docker']
+jvmoptsMap['min-bookworm-aarch64'] = jvmoptsMap['docker']
+jvmoptsMap['min-bullseye-aarch64'] = jvmoptsMap['docker']
+jvmoptsMap['min-jammy-aarch64']    = jvmoptsMap['docker']
 
 // https://github.com/jenkinsci/ec2-plugin/blob/ec2-1.41/src/main/java/hudson/plugins/ec2/SlaveTemplate.java
 SlaveTemplate getTemplate(String OSType, String AZ) {
@@ -624,7 +679,7 @@ SlaveTemplate getTemplate(String OSType, String AZ) {
         execMap[OSType],                            // String numExecutors
         userMap[OSType],                            // String remoteAdmin
         new UnixData('', '', '', '22', ''),         // AMITypeData amiType
-        '-Xmx512m -Xms512m',                        // String jvmopts
+        jvmoptsMap[OSType],                         // String jvmopts
         false,                                      // boolean stopOnTerminate
         netMap[AZ],                                 // String subnetId
         [
@@ -683,6 +738,7 @@ String region = 'eu-west-1'
             getTemplate('min-centos-6-x64',     "${region}${it}"),
             getTemplate('min-bionic-x64',       "${region}${it}"),
             getTemplate('min-buster-x64',       "${region}${it}"),
+            getTemplate('min-bookworm-x64',     "${region}${it}"),
             getTemplate('min-bullseye-x64',     "${region}${it}"),
             getTemplate('min-stretch-x64',      "${region}${it}"),
             getTemplate('min-xenial-x64',       "${region}${it}"),
@@ -692,6 +748,7 @@ String region = 'eu-west-1'
             getTemplate('docker-32gb-bullseye', "${region}${it}"),
             getTemplate('docker-32gb-aarch64',  "${region}${it}"),
             getTemplate('min-centos-7-aarch64', "${region}${it}"),
+            getTemplate('min-bookworm-aarch64', "${region}${it}"),
             getTemplate('min-bullseye-aarch64', "${region}${it}"),
             getTemplate('min-jammy-aarch64',    "${region}${it}"),
         ],                                       // List<? extends SlaveTemplate> templates
